--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.3.0",
+    "http-proxy-middleware": "^0.19.1",
     "prettier": "^1.6.1"
-  },
-  "proxy": "https://newsfeed-backend.herokuapp.com"
+  }
 }
